--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" src="main.js" defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Objekter og API</title>
     <script src="main.js" defer></script>
   </head>
   <body>
-    <main>
-      <img id="dog1" src="" alt="" />
-      <img id="dog2" src="" alt="" />
-      <img id="dog3" src="" alt="" />
-      <img id="dog4" src="" alt="" />
-    </main>
+    <main id="container"></main>
   </body>
 </html>
