Update bonus task

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="main.js" defer></script>
   </head>
   <body>
+    <label for="inputBreed">Choose a breed:</label>
+    <select name="inputBreed" id="inputBreed">
+      <option value="">-- Select breed --</option>
+    </select>
+    <input id="inputAmount" type="number" value="4" />
+    <button id="display-btn">Display</button>
     <main id="container"></main>
   </body>
 </html>
