Add nav and label element

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <script type="module" src="main.js" defer></script>
   </head>
   <body>
-    <label for="inputBreed">Choose a breed:</label>
-    <select name="inputBreed" id="inputBreed">
-      <option value="">-- Select breed --</option>
-    </select>
-    <input id="inputAmount" type="number" value="4" />
-    <button id="display-btn">Display</button>
+    <nav id="inputs">
+      <label for="inputBreed">Choose a breed:</label>
+      <select name="inputBreed" id="inputBreed">
+        <option value="">-- Select breed --</option>
+      </select>
+      <label for="inputAmount">Amount of pictures:</label>
+      <input id="inputAmount" type="number" value="4" />
+      <button id="display-btn">Display</button>
+    </nav>
     <main id="container"></main>
   </body>
 </html>
